// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/radar/RadarAnimation should render correctly with bottom-center positioning 1`] = `
<d
  attachment="top center"
  classPrefix="radar-animation"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={true}
  renderElement={[Function]}
  renderElementTo={<body />}
  renderTarget={[Function]}
  targetAttachment="bottom center"
/>
`;

exports[`components/radar/RadarAnimation should render correctly with bottom-left positioning 1`] = `
<d
  attachment="top left"
  classPrefix="radar-animation"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={true}
  renderElement={[Function]}
  renderElementTo={<body />}
  renderTarget={[Function]}
  targetAttachment="bottom left"
/>
`;

exports[`components/radar/RadarAnimation should render correctly with bottom-right positioning 1`] = `
<d
  attachment="top right"
  classPrefix="radar-animation"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={true}
  renderElement={[Function]}
  renderElementTo={<body />}
  renderTarget={[Function]}
  targetAttachment="bottom right"
/>
`;

exports[`components/radar/RadarAnimation should render correctly with middle-center positioning 1`] = `
<d
  attachment="middle center"
  classPrefix="radar-animation"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={true}
  renderElement={[Function]}
  renderElementTo={<body />}
  renderTarget={[Function]}
  targetAttachment="middle center"
/>
`;

exports[`components/radar/RadarAnimation should render correctly with middle-left positioning 1`] = `
<d
  attachment="middle right"
  classPrefix="radar-animation"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={true}
  renderElement={[Function]}
  renderElementTo={<body />}
  renderTarget={[Function]}
  targetAttachment="middle left"
/>
`;

exports[`components/radar/RadarAnimation should render correctly with middle-right positioning 1`] = `
<d
  attachment="middle left"
  classPrefix="radar-animation"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={true}
  renderElement={[Function]}
  renderElementTo={<body />}
  renderTarget={[Function]}
  targetAttachment="middle right"
/>
`;

exports[`components/radar/RadarAnimation should render correctly with tetherElementClassName 1`] = `
<d
  attachment="middle left"
  className="tether-element-class-name"
  classPrefix="radar-animation"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={true}
  renderElement={[Function]}
  renderElementTo={
    <body>
      <div
        class="radar-animation-element radar-animation-enabled radar-animation-abutted radar-animation-abutted-left radar-animation-abutted-right radar-animation-abutted-top radar-animation-abutted-bottom radar-animation-element-attached-middle radar-animation-element-attached-left radar-animation-target-attached-middle radar-animation-target-attached-right"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(0px) translateY(0px) translateZ(0);"
      >
        <div
          class="radar "
          data-resin-target="radaranimation1"
          id="radarAnimation10"
        >
          <div
            class="radar-dot"
          />
          <div
            class="radar-circle"
          />
        </div>
      </div>
      <div
        data-tether-id="1"
        style="top: 0px; left: 0px; position: absolute;"
      />
      <div
        class="radar-animation-element radar-animation-enabled radar-animation-out-of-bounds radar-animation-out-of-bounds-left radar-animation-element-attached-middle radar-animation-element-attached-left radar-animation-target-attached-middle radar-animation-target-attached-right"
        style="top: 0px; left: 0px; position: absolute; transform: translateX(-10px) translateY(0px) translateZ(0);"
      >
        <div
          class="radar "
          id="radarAnimation11"
        >
          <div
            class="radar-dot"
          />
          <div
            class="radar-circle"
          />
        </div>
      </div>
    </body>
  }
  renderTarget={[Function]}
  targetAttachment="middle right"
/>
`;

exports[`components/radar/RadarAnimation should render correctly with top-center positioning 1`] = `
<d
  attachment="bottom center"
  classPrefix="radar-animation"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={true}
  renderElement={[Function]}
  renderElementTo={<body />}
  renderTarget={[Function]}
  targetAttachment="top center"
/>
`;

exports[`components/radar/RadarAnimation should render correctly with top-left positioning 1`] = `
<d
  attachment="bottom left"
  classPrefix="radar-animation"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={true}
  renderElement={[Function]}
  renderElementTo={<body />}
  renderTarget={[Function]}
  targetAttachment="top left"
/>
`;

exports[`components/radar/RadarAnimation should render correctly with top-right positioning 1`] = `
<d
  attachment="bottom right"
  classPrefix="radar-animation"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={true}
  renderElement={[Function]}
  renderElementTo={<body />}
  renderTarget={[Function]}
  targetAttachment="top right"
/>
`;
